--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </div>
             </div>
         </div>
-
+        <script src="./vannila-reducer.js"></script>
         <script src="./script.js"></script>
     </body>
 </html>
